update parallel stream